Disable selecting images (issue on mobile)

--- a/src/components/Image.css
+++ b/src/components/Image.css
@@ -9,4 +9,5 @@
 
 .image {
   cursor: pointer;
+  user-select: none;
 }
